[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Actors/Enemy1/Enemy1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Actors/Enemy1/Enemy1.gd" type="Script" id=3]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 0, 0, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.0126582, 0 ), 0.0, 1.24186, 0, 0, Vector2( 1, 0.0102272 ), -1.23972, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.13
flag_disable_z = true
gravity = Vector3( 98, 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 1.0
angular_velocity = 82.76
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 36.78
linear_accel_random = 1.0
radial_accel = 29.89
damping = 44.83
damping_random = 0.53
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="StreamTexture" id=6]
load_path = "res://.import/Circle.png-c4d0e87a511c6329583e9664f485844c.stex"

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CircleShape2D" id=8]
radius = 5.0

[node name="Enemy1" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 3, 0 )
amount = 20
lifetime = 0.5
randomness = 1.0
local_coords = false
process_material = SubResource( 5 )
texture = SubResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -12, 0 )
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
